# Cluster_With_Docker

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  evaluate.py  pyproject.toml  pytest.ini  requirements.txt
outputs/metrics/: comparison_table.csv  evaluation_metrics.json
src/: __init__.py  data_loader.py  metrics.py  models.py  visualisation.py  visualization.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_evaluate.py  test_metrics.py  test_models.py  test_visualisation.py
